Harden auth, proxy /api, clear-cache modal, redact secrets

--- a/RELEASES/v1.3-stable.md
+++ b/RELEASES/v1.3-stable.md
@@ -51,7 +51,7 @@ CREATE UNIQUE INDEX idx_users_email ON users(email);
 ## 📧 إعدادات البريد الإلكتروني
 
 **مزود الخدمة:** Gmail SMTP  
-**البريد الإلكتروني:** m.fouad@zaco.sa  
+**البريد الإلكتروني:** <YOUR_SMTP_EMAIL>  
 **المنفذ:** 587 (TLS)  
 **الحالة:** ✅ مُفعّل ويعمل
 
@@ -71,10 +71,10 @@ CREATE UNIQUE INDEX idx_users_email ON users(email);
 ```
 [Approvals] Requester email check for approval: { 
   requesterId: 180, 
-  email: 'm.fouad@zaco.sa', 
+  email: '<YOUR_SMTP_EMAIL>', 
   hasEmail: true 
 }
-[EmailService] Email sent successfully to: m.fouad@zaco.sa
+[EmailService] Email sent successfully to: <YOUR_SMTP_EMAIL>
 [Approvals] Approval email sent to requester 180
 ```
 
@@ -105,9 +105,9 @@ psql $DATABASE_URL -c "UPDATE users SET email = username WHERE email IS NULL OR 
 
 ### متغيرات البيئة على Render
 ```env
-EMAIL_USER=m.fouad@zaco.sa
-EMAIL_PASSWORD=rpctvamrxnfcmzai
-EMAIL_FROM=ZACO <m.fouad@zaco.sa>
+EMAIL_USER=<YOUR_SMTP_EMAIL>
+EMAIL_PASS=<YOUR_APP_PASSWORD>
+EMAIL_FROM=ZACO <YOUR_SMTP_EMAIL>
 ```
 
 ---
@@ -166,7 +166,7 @@ EMAIL_FROM=ZACO <m.fouad@zaco.sa>
 ## 📞 الدعم الفني
 
 للمساعدة أو الإبلاغ عن مشكلة:
-- البريد الإلكتروني: m.fouad@zaco.sa
+- البريد الإلكتروني: <SUPPORT_EMAIL>
 - Render Console: https://dashboard.render.com
 - GitHub Issues: https://github.com/mfouad-del/zacoback/issues
 
