Fix SW cache + English default + full RTL/LTR + translations

--- a/locales/ar.json
+++ b/locales/ar.json
@@ -1,22 +1,30 @@
 {
   "app.title": "مركز اتصالات MDLBEAST",
   "app.description": "نظام إدارة الاتصالات والأرشيف المتكامل",
+  "app.footer": "مركز اتصالات MDLBEAST - جميع الحقوق محفوظة © 2026",
   
   "nav.dashboard": "لوحة التحكم",
-  "nav.archive": "الأرشيف",
-  "nav.projects": "المشاريع",
-  "nav.users": "المستخدمين",
-  "nav.reports": "التقارير",
-  "nav.approvals": "الاعتمادات",
-  "nav.settings": "الإعدادات",
+  "nav.incoming": "قيد وارد جديد",
+  "nav.outgoing": "قيد صادر جديد",
+  "nav.archive": "الأرشيف والبحث",
+  "nav.scanner": "تتبع الباركود",
+  "nav.reports": "تقارير الأرشيف",
+  "nav.audit": "مراقبة التفاعل",
+  "nav.approvals": "نظام الإعتمادات",
+  "nav.notifications": "مركز الإشعارات",
+  "nav.internal": "التواصل الداخلي",
+  "nav.users": "إدارة المستخدمين",
+  "nav.admin": "حالة النظام",
+  "nav.backup": "النسخ الاحتياطي",
   "nav.logout": "تسجيل الخروج",
   
-  "login.title": "تسجيل الدخول",
+  "login.title": "نظام MDLBEAST الإداري",
   "login.username": "اسم المستخدم",
   "login.password": "كلمة المرور",
   "login.remember": "تذكرني",
   "login.submit": "دخول",
   "login.error": "اسم المستخدم أو كلمة المرور غير صحيحة",
+  "login.clearCache": "حل مشاكل تسجيل الدخول",
   
   "common.save": "حفظ",
   "common.cancel": "إلغاء",
@@ -33,9 +41,19 @@
   "common.confirm": "تأكيد",
   "common.yes": "نعم",
   "common.no": "لا",
+  "common.actions": "إجراءات",
+  "common.status": "الحالة",
+  "common.active": "نشط",
+  "common.inactive": "غير نشط",
+  "common.refresh": "تحديث",
+  "common.close": "إغلاق",
+  "common.view": "عرض",
+  "common.download": "تحميل",
   
   "documents.title": "المعاملات",
   "documents.create": "معاملة جديدة",
+  "documents.incoming": "وارد",
+  "documents.outgoing": "صادر",
   "documents.barcode": "الرقم",
   "documents.type": "النوع",
   "documents.sender": "المرسل",
@@ -44,58 +62,66 @@
   "documents.date": "التاريخ",
   "documents.status": "الحالة",
   "documents.priority": "الأولوية",
+  "documents.priority.normal": "عاديه",
+  "documents.priority.urgent": "عاجله",
+  "documents.priority.very_urgent": "عاجل",
+  "documents.createdBy": "أنشأ بواسطة",
+  "documents.attachments": "المرفقات",
   
-  "users.role": "الدور",
-  "users.position": "المسمى الوظيفي",
-  "users.manager": "المدير المباشر",
-  "users.department": "القسم",
-  "users.scope": "نطاق الصلاحية",
-  "role.admin": "مدير نظام",
-  "role.manager": "مدير",
-  "role.supervisor": "مشرف",
-  "role.member": "مستخدم",
-  
-  "common.actions": "إجراءات",
-  "common.status": "الحالة",
-  "common.active": "نشط",
-  "common.inactive": "غير نشط",
-  
-  "chat.start_new": "ابدأ محادثة جديدة",
-  "chat.type_message": "اكتب رسالتك هنا...",
-  "chat.attachments_only": "مرفقات فقط",
-  "chat.search_placeholder": "بحث في المحادثات...",
-  "chat.all": "الجميع",
-  "chat.direct": "محادثات مباشرة",
-  "chat.channels": "قنوات",
-  "chat.no_permission": "ليس لديك صلاحية الوصول للمحادثات",
-  "chat.send": "إرسال",
-  
-  "users.title": "المستخدمين",
+  "users.title": "إدارة المستخدمين",
   "users.create": "مستخدم جديد",
   "users.username": "اسم المستخدم",
   "users.fullname": "الاسم الكامل",
   "users.email": "البريد الإلكتروني",
   "users.role": "الدور",
+  "users.position": "المسمى الوظيفي",
+  "users.manager": "المدير المباشر",
+  "users.department": "القسم",
+  "users.scope": "نطاق الصلاحية",
   "users.status": "الحالة",
   "users.active": "نشط",
   "users.inactive": "غير نشط",
   
-  "projects.title": "المشاريع",
-  "projects.create": "مشروع جديد",
-  "projects.name": "اسم المشروع",
-  "projects.number": "رقم المشروع",
-  "projects.client": "العميل",
-  "projects.location": "الموقع",
-  "projects.value": "قيمة العقد",
-  "projects.status": "الحالة",
+  "role.admin": "مدير نظام",
+  "role.manager": "مدير",
+  "role.supervisor": "مشرف",
+  "role.member": "مستخدم",
   
-  "notifications.title": "الإشعارات",
-  "notifications.markAllRead": "تعليم الكل كمقروء",
+  "notifications.title": "مركز الإشعارات",
+  "notifications.markAllRead": "قراءة الكل",
   "notifications.clear": "مسح الكل",
   "notifications.empty": "لا توجد إشعارات",
+  "notifications.unread": "غير مقروء",
+  "notifications.viewAll": "عرض كل الإشعارات",
+  "notifications.new": "جديد",
+  "notifications.read": "قراءة",
+  "notifications.delete": "حذف",
   
-  "email.subject": "الموضوع",
-  "email.body": "الرسالة",
-  "email.send": "إرسال",
-  "email.sent": "تم إرسال البريد بنجاح"
+  "reports.title": "تقارير الأرشيف",
+  "reports.generate": "إنشاء تقرير",
+  "reports.dateFrom": "من تاريخ",
+  "reports.dateTo": "إلى تاريخ",
+  "reports.scope": "النطاق",
+  "reports.all": "الكل",
+  "reports.print": "طباعة التقرير",
+  "reports.export": "تصدير Excel / CSV",
+  
+  "approvals.title": "نظام الإعتمادات",
+  "approvals.pending": "قيد الإنتظار",
+  "approvals.approved": "معتمد",
+  "approvals.rejected": "مرفوض",
+  
+  "backup.title": "النسخ الاحتياطي والاستعادة",
+  "backup.create": "إنشاء نسخة احتياطية",
+  "backup.restore": "استعادة",
+  "backup.download": "تحميل",
+  
+  "settings.title": "الإعدادات",
+  "settings.language": "اللغة",
+  "settings.theme": "السمة",
+  "settings.profile": "الملف الشخصي",
+  "settings.changePassword": "تغيير كلمة المرور",
+  
+  "language.english": "English",
+  "language.arabic": "عربي"
 }
