--- a/locales/en.json
+++ b/locales/en.json
@@ -1,22 +1,30 @@
 {
   "app.title": "MDLBEAST Communications Center",
   "app.description": "Integrated Communications & Archive Management System",
+  "app.footer": "MDLBEAST Communications Center - All Rights Reserved © 2026",
   
   "nav.dashboard": "Dashboard",
-  "nav.archive": "Archive",
-  "nav.projects": "Projects",
-  "nav.users": "Users",
-  "nav.reports": "Reports",
-  "nav.approvals": "Approvals",
-  "nav.settings": "Settings",
+  "nav.incoming": "New Incoming",
+  "nav.outgoing": "New Outgoing",
+  "nav.archive": "Archive & Search",
+  "nav.scanner": "Barcode Tracking",
+  "nav.reports": "Archive Reports",
+  "nav.audit": "Activity Monitor",
+  "nav.approvals": "Approvals System",
+  "nav.notifications": "Notifications Center",
+  "nav.internal": "Internal Communication",
+  "nav.users": "User Management",
+  "nav.admin": "System Status",
+  "nav.backup": "Backups",
   "nav.logout": "Logout",
   
-  "login.title": "Login",
+  "login.title": "MDLBEAST ERP SYSTEM",
   "login.username": "Username",
   "login.password": "Password",
   "login.remember": "Remember me",
   "login.submit": "Sign In",
   "login.error": "Invalid username or password",
+  "login.clearCache": "Fix Login Issues",
   
   "common.save": "Save",
   "common.cancel": "Cancel",
@@ -33,9 +41,19 @@
   "common.confirm": "Confirm",
   "common.yes": "Yes",
   "common.no": "No",
+  "common.actions": "Actions",
+  "common.status": "Status",
+  "common.active": "Active",
+  "common.inactive": "Inactive",
+  "common.refresh": "Refresh",
+  "common.close": "Close",
+  "common.view": "View",
+  "common.download": "Download",
   
   "documents.title": "Documents",
   "documents.create": "New Document",
+  "documents.incoming": "Incoming",
+  "documents.outgoing": "Outgoing",
   "documents.barcode": "Barcode",
   "documents.type": "Type",
   "documents.sender": "Sender",
@@ -44,58 +62,66 @@
   "documents.date": "Date",
   "documents.status": "Status",
   "documents.priority": "Priority",
+  "documents.priority.normal": "Normal",
+  "documents.priority.urgent": "Urgent",
+  "documents.priority.very_urgent": "Very Urgent",
+  "documents.createdBy": "Created By",
+  "documents.attachments": "Attachments",
   
-  "users.role": "Role",
-  "users.position": "Job Title",
-  "users.manager": "Direct Manager",
-  "users.department": "Department",
-  "users.scope": "Scope",
-  "role.admin": "Administrator",
-  "role.manager": "Manager",
-  "role.supervisor": "Supervisor",
-  "role.member": "User",
-  
-  "common.actions": "Actions",
-  "common.status": "Status",
-  "common.active": "Active",
-  "common.inactive": "Inactive",
-  
-  "chat.start_new": "Start New Conversation",
-  "chat.type_message": "Type your message...",
-  "chat.attachments_only": "Attachments Only",
-  "chat.search_placeholder": "Search messages...",
-  "chat.all": "All",
-  "chat.direct": "Direct Messages",
-  "chat.channels": "Channels",
-  "chat.no_permission": "You don't have permission to access chat",
-  "chat.send": "Send",
-  
-  "users.title": "Users",
+  "users.title": "User Management",
   "users.create": "New User",
   "users.username": "Username",
   "users.fullname": "Full Name",
   "users.email": "Email",
   "users.role": "Role",
+  "users.position": "Job Title",
+  "users.manager": "Direct Manager",
+  "users.department": "Department",
+  "users.scope": "Scope",
   "users.status": "Status",
   "users.active": "Active",
   "users.inactive": "Inactive",
   
-  "projects.title": "Projects",
-  "projects.create": "New Project",
-  "projects.name": "Project Name",
-  "projects.number": "Project Number",
-  "projects.client": "Client",
-  "projects.location": "Location",
-  "projects.value": "Contract Value",
-  "projects.status": "Status",
+  "role.admin": "System Administrator",
+  "role.manager": "Manager",
+  "role.supervisor": "Supervisor",
+  "role.member": "User",
   
-  "notifications.title": "Notifications",
-  "notifications.markAllRead": "Mark all as read",
-  "notifications.clear": "Clear all",
+  "notifications.title": "Notifications Center",
+  "notifications.markAllRead": "Mark All as Read",
+  "notifications.clear": "Clear All",
   "notifications.empty": "No notifications",
+  "notifications.unread": "Unread",
+  "notifications.viewAll": "View All Notifications",
+  "notifications.new": "New",
+  "notifications.read": "Read",
+  "notifications.delete": "Delete",
   
-  "email.subject": "Subject",
-  "email.body": "Message",
-  "email.send": "Send",
-  "email.sent": "Email sent successfully"
+  "reports.title": "Archive Reports",
+  "reports.generate": "Generate Report",
+  "reports.dateFrom": "From Date",
+  "reports.dateTo": "To Date",
+  "reports.scope": "Scope",
+  "reports.all": "All",
+  "reports.print": "Print Report",
+  "reports.export": "Export Excel/CSV",
+  
+  "approvals.title": "Approvals System",
+  "approvals.pending": "Pending",
+  "approvals.approved": "Approved",
+  "approvals.rejected": "Rejected",
+  
+  "backup.title": "Backup & Restore",
+  "backup.create": "Create Backup",
+  "backup.restore": "Restore",
+  "backup.download": "Download",
+  
+  "settings.title": "Settings",
+  "settings.language": "Language",
+  "settings.theme": "Theme",
+  "settings.profile": "Profile",
+  "settings.changePassword": "Change Password",
+  
+  "language.english": "English",
+  "language.arabic": "Arabic"
 }
