Fix Arabic layout, restore branding, fix login loop, and clean translations

--- a/locales/ar.json
+++ b/locales/ar.json
@@ -147,5 +147,266 @@
   "settings.changePassword": "تغيير كلمة المرور",
   
   "language.english": "English",
-  "language.arabic": "عربي"
+  "language.arabic": "عربي",
+
+  "archive.searchTitle": "بحث سريع",
+  "archive.searchPlaceholder": "الباركود، الموضوع، الجهة...",
+  "common.fromDate": "من تاريخ",
+  "common.toDate": "إلى تاريخ",
+  "archive.docType": "نوع القيد",
+  "archive.all": "الكل",
+  "archive.incoming": "وارد",
+  "archive.outgoing": "صادر",
+  "archive.extractReport": "استخراج تقرير",
+  "archive.unifiedID": "المعرف الموحد",
+  "archive.docDetails": "تفاصيل القيد",
+  "archive.addDetails": "البيانات الإضافية",
+  "archive.actions": "الإجراءات",
+  "archive.stamp": "ختم المستند",
+  "archive.attachments": "المرفقات",
+  "archive.to": "إلى",
+  "archive.from": "من",
+  "archive.by": "بواسطة",
+  "archive.pagination": "عرض",
+  "archive.paginationOf": "من أصل",
+  "archive.page": "صفحة",
+
+  "internal.title": "التواصل الداخلي",
+  "internal.subtitle": "نظام المراسلات الآمن",
+  "internal.placeholder": "اكتب رسالتك...",
+  "internal.send": "إرسال",
+  "internal.noMessages": "لا توجد رسائل بعد",
+  "internal.send_error": "فشل الإرسال: تحقق من الاتصال",
+  "internal.edit_error": "فشل تعديل الرسالة",
+  "internal.delete_confirm": "حذف الرسالة؟",
+  "internal.delete_error": "فشل حذف الرسالة",
+  "internal.select_recipient_title": "توجيه الرسالة إلى",
+  "internal.select_recipient_subtitle": "اختر المستلمين لرؤية الرسالة",
+  "internal.all": "الكل",
+  "internal.search_placeholder": "بحث في الرسائل...",
+  "internal.type_message": "اكتب رسالتك...",
+  "internal.start_new": "بدء محادثة جديدة",
+  "internal.attachments_only": "مرفقات فقط",
+  "internal.typing": "يكتب الآن...",
+  "internal.only_me": "أنا فقط",
+  "internal.no_permission": "لا تملك صلاحية",
+  "internal.remove": "إزالة",
+  "internal.preview": "معاينة",
+  "internal.private_msg": "رسالة خاصة من",
+  "internal.to": "إلى:",
+  "internal.pinned": "مثبتة",
+  "internal.edited": "(معدلة)",
+  "internal.msg_deleted": "تم حذف الرسالة",
+  "internal.attachment_default": "مرفق",
+  "internal.type_image": "صورة",
+  "internal.type_pdf": "ملف PDF",
+  "internal.type_file": "ملف",
+  "internal.star": "تمييز بنجمة",
+  "internal.pin": "تثبيت",
+  "internal.open": "فتح",
+  "internal.select_recipient": "الرجاء اختيار مستلم",
+  "internal.private_to": "خاص لـ :",
+
+  "permissions.archive": "الاتصالات الإدارية",
+  "permissions.archive.desc": "إدارة المستندات والصادر والوارد والختم الإلكتروني",
+  "permissions.reports": "التقارير",
+  "permissions.reports.desc": "عرض وإنشاء وتصدير التقارير",
+  "permissions.users": "المستخدمين",
+  "permissions.users.desc": "إدارة المستخدمين والصلاحيات",
+  "permissions.system": "النظام",
+  "permissions.system.desc": "إعدادات النظام والنسخ الاحتياطي",
+  "permissions.communication": "التواصل",
+  "permissions.communication.desc": "الدردشة الداخلية والإعلانات",
+  "permissions.approvals": "الاعتمادات",
+  "permissions.approvals.desc": "الموافقات والطلبات",
+
+  "permissions.action.view_idx": "عرض في السايدبار",
+  "permissions.action.view_all": "عرض الكل",
+  "permissions.action.view_own": "عرض الخاص فقط",
+  "permissions.action.create": "إنشاء جديد",
+  "permissions.action.edit": "تعديل",
+  "permissions.action.delete": "حذف",
+  "permissions.action.stamp": "الختم الإلكتروني",
+  "permissions.action.export": "تصدير/طباعة",
+  "permissions.action.view_list": "عرض القائمة",
+  "permissions.action.manage_permissions": "إدارة الصلاحيات",
+  "permissions.action.view_audit_logs": "سجل العمليات",
+  "permissions.action.manage_settings": "إعدادات النظام",
+  "permissions.action.manage_backups": "النسخ الاحتياطي",
+  "permissions.action.access_chat": "الوصول للدردشة",
+  "permissions.action.view_announcements": "مشاهدة الإعلانات",
+  "permissions.action.moderate_chat": "إدارة الدردشة",
+  "permissions.action.view_pending": "الطلبات المعلقة",
+  "permissions.action.action_approve": "الموافقة",
+  "permissions.action.action_reject": "الرفض",
+
+  "permissions.manage_title": "إدارة الصلاحيات",
+  "permissions.manage_subtitle": "تحكم دقيق بصلاحيات الوصول والعمليات في النظام",
+  "permissions.mode_inherit": "وراثة (Role Based)",
+  "permissions.mode_custom": "مخصص",
+  "permissions.custom_warning": "تنبيه: أنت الآن في الوضع المخصص. لن يتأثر هذا المستخدم بأي تحديثات مستقبلية لصلاحيات دوره الأساسي.",
+
+  "permissions.group.access": "الوصول",
+  "permissions.group.manage": "الإدارة",
+  "permissions.group.tools": "الأدوات",
+  "permissions.group.security": "الأمان",
+  "permissions.group.settings": "الإعدادات",
+  "permissions.group.chat": "الدردشة",
+  "permissions.group.display": "العرض",
+  "permissions.group.actions": "الإجراءات",
+
+  "user.role.admin": "مدير نظام",
+  "user.role.manager": "مدير",
+  "user.role.supervisor": "مشرف",
+  "user.role.member": "مستخدم",
+  "user.role.accountant": "محاسب",
+
+  "user.role.desc.member": "مستخدم عادي",
+  "user.role.desc.supervisor": "مشرف (صلاحيات إشراف)",
+  "user.role.desc.accountant": "محاسب (صلاحيات مالية)",
+  "user.role.desc.manager": "مدير (تحكم محدود)",
+  "user.role.desc.admin": "مدير نظام (تحكم كامل)",
+
+  "position.gm": "مدير عام",
+  "position.pm": "مدير مشاريع",
+  "position.dept_manager": "مدير قسم",
+  "position.supervisor": "مشرف",
+  "position.engineer": "مهندس",
+  "position.technician": "فني",
+  "position.employee": "موظف",
+  "position.trainee": "متدرب",
+  "position.consultant": "استشاري خارجي",
+  "position.none": "-- لم يُحدد --",
+
+  "scope.self": "بياناته فقط",
+  "scope.children": "المرؤوسين المباشرين",
+  "scope.tree": "كامل الفرع",
+  "scope.all": "كل النظام",
+
+  "user.form.title.add": "إضافة مستخدم جديد",
+  "user.form.title.edit": "تعديل مستخدم",
+  "user.form.fullname": "الاسم الكامل",
+  "user.form.email": "البريد الإلكتروني",
+  "user.form.password": "كلمة المرور",
+  "user.form.password_ph_edit": "اتركه فارغاً للإبقاء على القديم",
+  "user.form.role": "الصلاحية الأساسية",
+  "user.form.position": "المنصب الإداري",
+  "user.form.manager": "المدير المباشر (التبعية)",
+  "user.form.scope": "نطاق الرؤية",
+  "user.form.phone": "رقم الهاتف",
+  "user.form.department": "القسم",
+  "user.form.signature": "التوقيع الإلكتروني",
+  "user.form.stamp": "الختم الرسمي",
+  "user.form.notifications": "إعدادات الإشعارات",
+  "user.form.notify_doc": "تنبيه عند استلام وثائق",
+  "user.form.notify_approval": "تنبيه عند طلب اعتمادات",
+  "user.form.notify_password": "تنبيه عند تغيير كلمة المرور",
+  "user.form.notify_report": "تنبيه عند صدور تقارير",
+  "user.form.upload": "رفع الملف",
+  "user.form.uploading": "جاري الرفع...",
+  "user.form.no_manager": "-- بدون مدير (أعلى الهيكل) --",
+  "user.header.title": "إدارة المستخدمين",
+  "user.header.subtitle": "الهيكل التنظيمي وإدارة الصلاحيات",
+  "user.view.tree": "شجرة",
+  "user.view.list": "قائمة",
+  "user.action.add": "إضافة مستخدم",
+  "user.action.cancel": "إلغاء",
+  "user.save_success": "تم حفظ المستخدم بنجاح",
+  "user.save_error": "فشل حفظ المستخدم",
+  "user.form.signature_stamp": "التوقيع والختم",
+  "user.form.no_signature": "لا يوجد توقيع",
+  "user.form.no_stamp": "لا يوجد ختم",
+  "user.form.change_signature": "تغيير التوقيع",
+  "user.form.upload_signature": "رفع توقيع",
+  "user.form.change_stamp": "تغيير الختم",
+  "user.form.upload_stamp": "رفع ختم",
+  "user.form.signature_hint": "✨ التوقيع والختم يُستخدمان في الاعتمادات والتقارير",
+  "user.view_mode": "طريقة العرض",
+  "user.view_tree": "شجري",
+  "user.view_list": "قائمة",
+  "user.table.user": "المستخدم",
+  "user.table.role": "الدور",
+  "user.table.position": "المسمى الوظيفي",
+  "user.table.manager": "المدير المباشر",
+  "user.table.actions": "الإجراءات",
+  "user.action.edit": "تعديل",
+  "user.action.delete": "حذف",
+  "user.form.saving": "جارٍ الحفظ...",
+  "user.form.save_changes": "حفظ التغييرات",
+  "user.form.create_user": "إنشاء المستخدم",
+  "common.loading_data": "جارٍ تحميل البيانات...",
+  "user.delete_confirm_children": "هل أنت متأكد من حذف \"{name}\"؟ لديه {count} تابعين سيصبحون بدون مدير.",
+  "user.delete_confirm": "هل أنت متأكد من حذف \"{name}\"؟",
+  "common.deleted": "تم الحذف",
+  "user.delete_success": "تم حذف المستخدم بنجاح",
+  "user.delete_error": "فشل حذف المستخدم",
+  "user.position.none": "-- لم يُحدد --",
+  "user.position.general_manager": "مدير عام",
+  "user.position.project_manager": "مدير مشاريع",
+  "user.position.department_manager": "مدير قسم",
+  "user.position.supervisor": "مشرف",
+  "user.position.engineer": "مهندس",
+  "user.position.technician": "فني",
+  "user.position.employee": "موظف",
+  "user.position.intern": "متدرب",
+  "user.position.consultant": "استشاري خارجي",
+  "user.scope.self": "بياناته فقط",
+  "user.scope.children": "المرؤوسين المباشرين",
+  "user.scope.tree": "كامل الفرع",
+  "user.scope.all": "كل النظام",
+  "archive.attachment_added": "تم إضافة المرفق بنجاح",
+  "archive.attachment_view_error": "تم رفع الملف لكن فشل تحديث العرض. يرجى تحديث الصفحة.",
+  "archive.attachment_failed": "فشل إضافة المرفق: ",
+  "archive.newRecord": "قيد جديد",
+  "archive.newIncoming": "قيد وارد جديد",
+  "archive.newOutgoing": "قيد صادر جديد",
+  "archive.institutionName": "المؤسسة المستقلة: زوايا البناء",
+  "archive.barcodeNote": "ملاحظة: سيُولد رقم المعاملة تلقائياً عند الحفظ بشكل رقمي متسلسل (مثال: 0000001).",
+  "archive.upload_failed": "فشل رفع الملف. حاول لاحقاً.",
+  "archive.subject": "موضوع المعاملة",
+  "archive.sender": "من جهة",
+  "archive.recipient": "إلى جهة",
+  "archive.senderPlaceholder": "أدخل اسم الجهة المرسلة",
+  "archive.recipientPlaceholder": "أدخل اسم الجهة المستقبلة",
+  "archive.docDate": "تاريخ الصادر/الوارد",
+  "archive.attachmentsPlaceholder": "مثال: 1 اسطوانة",
+  "archive.classification": "تصنيف السرية",
+  "archive.priority": "أهمية المعاملة",
+  "archive.security.normal": "عادي - متاح للجميع",
+  "archive.security.secret": "سري - محدود الوصول",
+  "archive.priority.normal": "معالجة اعتيادية",
+  "archive.priority.urgent": "معالجة عاجلة",
+  "archive.priority.topUrgent": "عاجل جداً",
+  "archive.save": "حفظ القيد",
+  "archive.saving": "جارٍ الحفظ...",
+  "archive.upload_file": "رفع النسخة الضوئية",
+  "archive.click_upload": "اضغط للرفع",
+  "archive.drag_drop": "أو اسحب ملف PDF",
+  "archive.pages": "صفحة",
+  "archive.file.page_count": "عدد صفحات المرفق:",
+  "archive.file.upload_title": "رفع المستند الأصلي لدمغه بالباركود",
+  "archive.file.pdf_only": "تنسيق PDF فقط",
+  "archive.file.choose_pdf": "اختيار ملف PDF",
+  "archive.file.preview": "عرض المعاينة",
+  "archive.file.generate_barcode": "توليد الباركود الرقمي الموحد",
+  "reports.subtitle": "تقرير دوري شامل للمعاملات الصادرة والواردة",
+  "reports.reportDate": "تاريخ التقرير",
+  "reports.period": "الفترة",
+  "reports.total": "إجمالي المعاملات",
+  "reports.incoming": "الوارد",
+  "reports.outgoing": "الصادر",
+  "reports.footer": "تم التوليد بواسطة نظام MDLBEAST للاتصالات الإدارية",
+  "archive.type": "النوع",
+  "archive.date": "التاريخ",
+  "archive.statement": "البيان (اختياري)",
+  "archive.statementPlaceholder": "البيان والوصف الرسمي:\nتم قيد هذه المعاملة رقميًا وتوثيقها في السجل الموحد للمؤسسة، وتعتبر هذه النسخة أصلية بموجب\nالباركود المرجعي المسجل في أنظمة الحوكمة الرقمية",
+
+  "users.manage": "إدارة المستخدمين",
+  "users.addUser": "إضافة مستخدم",
+
+  "profile.title": "الملف الشخصي",
+  "profile.update": "تحديث الملف",
+
+  "common.required": "حقل مطلوب",
+  "common.saveChanges": "حفظ التغييرات"
 }
