--- a/locales/en.json
+++ b/locales/en.json
@@ -147,5 +147,274 @@
   "settings.changePassword": "Change Password",
   
   "language.english": "English",
-  "language.arabic": "Arabic"
+  "language.arabic": "Arabic",
+
+  "archive.searchTitle": "Quick Search",
+  "archive.searchPlaceholder": "Barcode, Subject, Entity...",
+  "common.fromDate": "From Date",
+  "common.toDate": "To Date",
+  "archive.docType": "Document Type",
+  "archive.all": "All",
+  "archive.incoming": "Incoming",
+  "archive.outgoing": "Outgoing",
+  "archive.extractReport": "Extract Report",
+  "archive.unifiedID": "Unified ID",
+  "archive.docDetails": "Transfer Details",
+  "archive.addDetails": "Additional Data",
+  "archive.actions": "Actions",
+  "archive.stamp": "Stamp Document",
+  "archive.attachments": "Attachments",
+  "archive.to": "To",
+  "archive.from": "From",
+  "archive.by": "By",
+  "archive.pagination": "Showing",
+  "archive.paginationOf": "of",
+  "archive.page": "Page",
+
+  "internal.title": "Internal Communication",
+  "internal.subtitle": "Secure Messaging System",
+  "internal.placeholder": "Type your message...",
+  "internal.send": "Send",
+  "internal.noMessages": "No messages yet",
+  "internal.send_error": "Failed to send: Check connection",
+  "internal.edit_error": "Failed to edit message",
+  "internal.delete_confirm": "Delete message?",
+  "internal.delete_error": "Failed to delete message",
+  "internal.select_recipient_title": "Direct Message To",
+  "internal.select_recipient_subtitle": "Select recipients to view message",
+  "internal.all": "All",
+  "internal.search_placeholder": "Search messages...",
+  "internal.type_message": "Type your message...",
+  "internal.start_new": "Start New Conversation",
+  "internal.attachments_only": "Attachments only",
+  "internal.typing": "is typing...",
+  "internal.only_me": "Only Me",
+  "internal.no_permission": "No Permission",
+  "internal.remove": "Remove",
+  "internal.preview": "Preview",
+  "internal.private_msg": "Private message from",
+  "internal.to": "To:",
+  "internal.pinned": "Pinned",
+  "internal.edited": "(edited)",
+  "internal.msg_deleted": "Message deleted",
+  "internal.attachment_default": "Attachment",
+  "internal.type_image": "Image",
+  "internal.type_pdf": "PDF File",
+  "internal.type_file": "File",
+  "internal.star": "Star Message",
+  "internal.pin": "Pin Message",
+  "internal.open": "Open",
+  "internal.select_recipient": "Please select a recipient",
+  "internal.private_to": "Private to:",
+
+  "permissions.archive": "Administrative Communications",
+  "permissions.archive.desc": "Document management, incoming/outgoing, and electronic stamping",
+  "permissions.reports": "Reports",
+  "permissions.reports.desc": "View, create, and export reports",
+  "permissions.users": "Users",
+  "permissions.users.desc": "User and permission management",
+  "permissions.system": "System",
+  "permissions.system.desc": "System settings and backups",
+  "permissions.communication": "Communication",
+  "permissions.communication.desc": "Internal chat and announcements",
+  "permissions.approvals": "Approvals",
+  "permissions.approvals.desc": "Approvals and requests",
+
+  "permissions.action.view_idx": "View in Sidebar",
+  "permissions.action.view_all": "View All",
+  "permissions.action.view_own": "View Own",
+  "permissions.action.create": "Create New",
+  "permissions.action.edit": "Edit",
+  "permissions.action.delete": "Delete",
+  "permissions.action.stamp": "Electronic Stamp",
+  "permissions.action.export": "Export/Print",
+  "permissions.action.view_list": "View List",
+  "permissions.action.manage_permissions": "Manage Permissions",
+  "permissions.action.view_audit_logs": "Audit Logs",
+  "permissions.action.manage_settings": "System Settings",
+  "permissions.action.manage_backups": "Backups",
+  "permissions.action.access_chat": "Access Chat",
+  "permissions.action.view_announcements": "View Announcements",
+  "permissions.action.moderate_chat": "Moderate Chat",
+  "permissions.action.view_pending": "Pending Requests",
+  "permissions.action.action_approve": "Approve",
+  "permissions.action.action_reject": "Reject",
+
+  "permissions.manage_title": "Permission Management",
+  "permissions.manage_subtitle": "Precise control over system access and operations",
+  "permissions.mode_inherit": "Inherit (Role Based)",
+  "permissions.mode_custom": "Custom",
+  "permissions.custom_warning": "Warning: You are in custom mode. This user will not be affected by future role permission updates.",
+
+  "permissions.group.access": "Access",
+  "permissions.group.manage": "Management",
+  "permissions.group.tools": "Tools",
+  "permissions.group.security": "Security",
+  "permissions.group.settings": "Settings",
+  "permissions.group.chat": "Chat",
+  "permissions.group.display": "Display",
+  "permissions.group.actions": "Actions",
+
+  "user.role.admin": "System Admin",
+  "user.role.manager": "Manager",
+  "user.role.supervisor": "Supervisor",
+  "user.role.member": "User",
+  "user.role.accountant": "Accountant",
+
+  "user.role.desc.member": "Normal User",
+  "user.role.desc.supervisor": "Supervisor (Supervision Permissions)",
+  "user.role.desc.accountant": "Accountant (Financial Permissions)",
+  "user.role.desc.manager": "Manager (Limited Control)",
+  "user.role.desc.admin": "System Admin (Full Control)",
+
+  "position.gm": "General Manager",
+  "position.pm": "Project Manager",
+  "position.dept_manager": "Department Manager",
+  "position.supervisor": "Supervisor",
+  "position.engineer": "Engineer",
+  "position.technician": "Technician",
+  "position.employee": "Employee",
+  "position.trainee": "Trainee",
+  "position.consultant": "External Consultant",
+  "position.none": "-- Not Specified --",
+
+  "scope.self": "Self Only",
+  "scope.children": "Direct Subordinates",
+  "scope.tree": "Full Branch",
+  "scope.all": "Full System",
+
+  "user.form.title.add": "Add New User",
+  "user.form.title.edit": "Edit User",
+  "user.form.fullname": "Full Name",
+  "user.form.email": "Email",
+  "user.form.password": "Password",
+  "user.form.password_ph_edit": "Leave empty to keep old password",
+  "user.form.role": "Role",
+  "user.form.position": "Position",
+  "user.form.manager": "Direct Manager",
+  "user.form.scope": "Scope",
+  "user.form.phone": "Phone",
+  "user.form.department": "Department",
+  "user.form.signature": "Digital Signature",
+  "user.form.stamp": "Official Stamp",
+  "user.form.notifications": "Notifications",
+  "user.form.notify_doc": "Notify on New Documents",
+  "user.form.notify_approval": "Notify on Approvals",
+  "user.form.notify_password": "Notify on Password Change",
+  "user.form.notify_report": "Notify on Reports",
+  "user.form.upload": "Upload",
+  "user.form.uploading": "Uploading...",
+  "user.form.no_manager": "-- No Manager (Top Level) --",
+  "user.header.title": "User Management",
+  "user.header.subtitle": "Organizational Structure and Permissions",
+  "user.view.tree": "Tree View",
+  "user.view.list": "List View",
+  "user.action.add": "Add User",
+  "user.action.cancel": "Cancel",
+  "user.save_success": "User Saved Successfully",
+  "user.save_error": "Failed to Save User",
+  "user.form.signature_stamp": "Signature & Stamp",
+  "user.form.no_signature": "No Signature",
+  "user.form.no_stamp": "No Stamp",
+  "user.form.change_signature": "Change Signature",
+  "user.form.upload_signature": "Upload Signature",
+  "user.form.change_stamp": "Change Stamp",
+  "user.form.upload_stamp": "Upload Stamp",
+  "user.form.uploading": "Uploading...",
+  "user.form.signature_hint": "✨ Signature and Stamp are used in approvals and reports",
+  "user.view_mode": "View Mode",
+  "user.view_tree": "Tree",
+  "user.view_list": "List",
+  "user.table.user": "User",
+  "user.table.role": "Role",
+  "user.table.position": "Position",
+  "user.table.manager": "Direct Manager",
+  "user.table.actions": "Actions",
+  "user.action.edit": "Edit",
+  "user.action.delete": "Delete",
+  "role.admin": "Admin",
+  "role.manager": "Manager",
+  "role.supervisor": "Supervisor",
+  "role.member": "Member",
+  "user.form.saving": "Saving...",
+  "user.form.save_changes": "Save Changes",
+  "user.form.create_user": "Create User",
+  "common.loading_data": "Loading data...",
+  "user.delete_confirm_children": "Are you sure you want to delete \"{name}\"? They have {count} subordinates who will be left without a manager.",
+  "user.delete_confirm": "Are you sure you want to delete \"{name}\"?",
+  "common.deleted": "Deleted",
+  "user.delete_success": "User deleted successfully",
+  "common.error": "Error",
+  "user.delete_error": "Failed to delete user",
+  "user.position.none": "-- Not Specified --",
+  "user.position.general_manager": "General Manager",
+  "user.position.project_manager": "Project Manager",
+  "user.position.department_manager": "Department Manager",
+  "user.position.supervisor": "Supervisor",
+  "user.position.engineer": "Engineer",
+  "user.position.technician": "Technician",
+  "user.position.employee": "Employee",
+  "user.position.intern": "Intern",
+  "user.position.consultant": "External Consultant",
+  "user.scope.self": "Own Data Only",
+  "user.scope.children": "Direct Subordinates",
+  "user.scope.tree": "Full Branch",
+  "user.scope.all": "Entire System",
+  "archive.attachment_added": "Attachment added successfully",
+  "archive.attachment_view_error": "File uploaded but view update failed. Please refresh.",
+  "archive.attachment_failed": "Failed to add attachment: ",
+  "archive.newRecord": "New Incoming/Outgoing Record",
+  "archive.newIncoming": "New Incoming Record",
+  "archive.newOutgoing": "New Outgoing Record",
+  "archive.institutionName": "ZWAYA AL BINA ESTABLISHMENT",
+  "archive.barcodeNote": "Note: Document ID will be auto-generated sequentially (e.g., 0000001).",
+  "archive.upload_failed": "Upload failed. Please try again.",
+  "archive.subject": "Subject",
+  "archive.sender": "From",
+  "archive.recipient": "To",
+  "archive.senderPlaceholder": "Enter Sender Name",
+  "archive.recipientPlaceholder": "Enter Recipient Name",
+  "archive.docDate": "Document Date",
+  "archive.attachments": "Attachments",
+  "archive.attachmentsPlaceholder": "e.g., 1 CD",
+  "archive.classification": "Classification",
+  "archive.priority": "Priority",
+  "archive.security.normal": "Normal - Public",
+  "archive.security.secret": "Secret - Restricted",
+  "archive.priority.normal": "Normal Processing",
+  "archive.priority.urgent": "Urgent Processing",
+  "archive.priority.topUrgent": "Top Urgent",
+  "archive.save": "Save Record",
+  "archive.saving": "Saving...",
+  "archive.upload_file": "Upload PDF",
+  "archive.click_upload": "Click to upload",
+  "archive.drag_drop": "or drag and drop",
+  "archive.pages": "Pages",
+  "archive.file.page_count": "Attachment Page Count:",
+  "archive.file.upload_title": "Upload Original Document for Barcode Stamping",
+  "archive.file.pdf_only": "PDF Format Only",
+  "archive.file.choose_pdf": "Choose PDF File",
+  "archive.file.preview": "View Preview",
+  "archive.file.generate_barcode": "Generate Unified Digital Barcode",
+  "reports.title": "Administrative Communications Report",
+  "reports.subtitle": "Comprehensive periodic report for incoming and outgoing transactions",
+  "reports.reportDate": "Report Date",
+  "reports.period": "Period",
+  "reports.total": "Total Transactions",
+  "reports.incoming": "Incoming",
+  "reports.outgoing": "Outgoing",
+  "reports.footer": "Generated by MDLBEAST Administrative Communications System",
+  "archive.type": "Type",
+  "archive.date": "Date",
+  "archive.statement": "Statement (Optional)",
+  "archive.statementPlaceholder": "Official statement and description:\nThis transaction has been digitally recorded and documented in the unified registry of the institution, and considered original under\nthe reference barcode registered in digital governance systems",
+
+  "users.manage": "User Management",
+  "users.addUser": "Add User",
+
+  "profile.title": "User Profile",
+  "profile.update": "Update Profile",
+  
+  "common.required": "Required Field",
+  "common.saveChanges": "Save Changes"
 }
