Update locale files with missing keys

--- a/locales/ar.json
+++ b/locales/ar.json
@@ -530,5 +530,36 @@
   "admin.logs.empty_title": "لا توجد سجلات",
   "admin.logs.empty_desc": "لم يتم تسجيل أي نشاط أو أخطاء مؤخراً",
   "admin.error_logs.title": "سجلات الأخطاء",
-  "admin.error_logs.count_suffix": "خطأ"
+  "admin.error_logs.count_suffix": "خطأ",
+  "common.user": "مستخدم",
+  "admin.uptime.format.zero_minutes": "0 دقيقة",
+  "notifications.refresh": "تحديث",
+  "notifications.no_notifications": "لا توجد إشعارات",
+  "notifications.no_notifications_desc": "سيظهر هنا كل جديد متعلق بالنظام والمعاملات",
+  "notifications.new_badge": "جديد",
+  "notifications.error_load": "فشل تحميل الإشعارات",
+  "notifications.unread_only": "غير المقروء فقط",
+  "notifications.mark_read_action": "قراءة",
+  "audit.field.id": "المعرف",
+  "audit.action.login": "تسجيل دخول",
+  "audit.action.login_fail": "فشل دخول",
+  "audit.action.logout": "تسجيل خروج",
+  "audit.action.create": "إنشاء/إضافة",
+  "audit.action.update": "تعديل",
+  "audit.action.delete": "حذف",
+  "audit.action.print": "طباعة",
+  "audit.action.download": "تحميل",
+  "audit.action.view": "عرض",
+  "audit.action.approve": "اعتماد",
+  "audit.action.reject": "رفض",
+  "audit.action.payment": "طلب دفع",
+  "audit.action.supervision": "تقرير إشراف",
+  "audit.action.user_mgmt": "إدارة مستخدمين",
+  "audit.action.project": "مشاريع",
+  "audit.action.archive": "أرشيف",
+  "audit.action.backup": "نسخ/مزامنة",
+  "audit.action.activity": "نشاط",
+  "audit.details.none": "لا توجد تفاصيل",
+  "login.cache_cleared": "تم تنظيف الكاش",
+  "login.cache_cleared_desc": "جرّب تسجيل الدخول مرة أخرى."
 }
