--- a/locales/en.json
+++ b/locales/en.json
@@ -530,5 +530,36 @@
   "admin.logs.empty_title": "No logs",
   "admin.logs.empty_desc": "No recent activity or errors recorded",
   "admin.error_logs.title": "Error Logs",
-  "admin.error_logs.count_suffix": "errors"
+  "admin.error_logs.count_suffix": "errors",
+  "common.user": "User",
+  "admin.uptime.format.zero_minutes": "0 minutes",
+  "notifications.refresh": "Refresh",
+  "notifications.no_notifications": "No notifications",
+  "notifications.no_notifications_desc": "New system updates will appear here",
+  "notifications.new_badge": "New",
+  "notifications.error_load": "Failed to load notifications",
+  "notifications.unread_only": "Unread Only",
+  "notifications.mark_read_action": "Mark Read",
+  "audit.field.id": "ID",
+  "audit.action.login": "Login",
+  "audit.action.login_fail": "Login Failed",
+  "audit.action.logout": "Logout",
+  "audit.action.create": "Create/Add",
+  "audit.action.update": "Edit",
+  "audit.action.delete": "Delete",
+  "audit.action.print": "Print",
+  "audit.action.download": "Download",
+  "audit.action.view": "View",
+  "audit.action.approve": "Approve",
+  "audit.action.reject": "Reject",
+  "audit.action.payment": "Payment Request",
+  "audit.action.supervision": "Supervision Report",
+  "audit.action.user_mgmt": "User Management",
+  "audit.action.project": "Projects",
+  "audit.action.archive": "Archive",
+  "audit.action.backup": "Backup/Sync",
+  "audit.action.activity": "Activity",
+  "audit.details.none": "No details",
+  "login.cache_cleared": "Cache Cleared",
+  "login.cache_cleared_desc": "Please try logging in again."
 }
